--- a/src/main/webapp/templates/modelo.xhtml
+++ b/src/main/webapp/templates/modelo.xhtml
@@ -34,7 +34,7 @@
 						<p:menuitem value="Produto" url="/pages/produtos.xhtml"/>
 						<p:menuitem value="Cliente" url="/pages/clientes.xhtml" />
 						<p:menuitem value="Funcionário" />
-						<p:menuitem value="Usuário" />
+						<p:menuitem value="Usuário" url="/pages/usuarios.xhtml"/>
 					</p:submenu>
 
 					<p:submenu label="Pesquisa">
