--- a/src/main/webapp/templates/modelo.xhtml
+++ b/src/main/webapp/templates/modelo.xhtml
@@ -33,13 +33,12 @@
 						<p:menuitem value="Fabricante" url="/pages/fabricantes.xhtml" />
 						<p:menuitem value="Produto" url="/pages/produtos.xhtml"/>
 						<p:menuitem value="Cliente" url="/pages/clientes.xhtml" />
-						<p:menuitem value="Funcionário" />
+						<p:menuitem value="Funcionário"  url="/pages/funcionario.xhtml"/>
 						<p:menuitem value="Usuário" url="/pages/usuarios.xhtml"/>
 					</p:submenu>
 
-					<p:submenu label="Pesquisa">
-						<p:menuitem value="Pesquisar Produto" />
-						<p:menuitem value="Pesquisar Fabricante"  />
+					<p:submenu label="Vendas">
+						<p:menuitem value="Venda Produto" />
 					</p:submenu>
 					
 					<p:submenu label="Agendamento de Servico">
