--- a/src/main/webapp/templates/modelo.xhtml
+++ b/src/main/webapp/templates/modelo.xhtml
@@ -38,7 +38,7 @@
 					</p:submenu>
 
 					<p:submenu label="Vendas">
-						<p:menuitem value="Venda Produto" />
+						<p:menuitem value="Venda Produto" url="/pages/vendas.xhtml" />
 					</p:submenu>
 					
 					<p:submenu label="Agendamento de Servico">
